<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA AndroidAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="advance">(1) fullscreen</string>
    <string name="go_to_camera">(2) camera</string>
    <string name="orientation">(3) Orientation/APR data</string>
    <string name="augment">AUGMENT YOUR WORLD</string>
    <string name="text_sample">(4) text render</string>
    <string name="title_activity_black_screen">A Black Screen...</string>
    <string name="title_activity_camera_preview">CameraPreviewActivity</string>
    <string name="title_activity_orientation_dashboard">OrientationDashboardActivity</string>
    <string name="title_activity_world3_d">World3DActivity</string>
    <string name="title_activity_maps">Map</string>

</resources>
