<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.Home"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/InfoHeader1"
            android:text="Importing world data from your location..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/InfoHeader2"
            android:text="Import complete! Press the button below to start."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/augment"
            android:textSize="24dp"
            android:onClick="toWorldActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/DebugHeader"
            android:text="DEBUG MENU - if you start the External GPS Receiver now, you must RESTART it after opening AUGMENT YOUR WORLD\t"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/BTInfoString"
            android:text="Bluetooth peer connection status:\t"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/BTYesNo"
            android:textStyle="bold"
            android:text="NOT CONNECTED"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LatitudeHeading"
            android:text="LAT\t\t"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/mLatitudeText"
            android:text="\?????"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LongitudeHeading"
            android:text="LONG\t"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/mLongitudeText"
            android:text="\?????"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance"
            android:textSize="12dp"
            android:onClick="advanceFromHome" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_camera"
            android:textSize="12dp"
            android:onClick="toCameraActivity" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation"
            android:textSize="12dp"
            android:onClick="toOrientationActivity" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sample"
            android:textSize="12dp"
            android:onClick="toTexample" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_maps"
            android:textSize="12dp"
            android:onClick="toMapsActivity"
            android:id="@+id/button" />
    </LinearLayout>

</LinearLayout>


